[FIX] website_slides: remove container fixed height
After reverting the bugfix, remove the fixed height
only to avoid overflowing of the progress bar and
title. By doing that the container will resize when
toggling the progress bar / completed tag. But it
was already the case with the previous fix.

Task-3607404

--- a/addons/website_slides/static/src/scss/website_slides.scss
+++ b/addons/website_slides/static/src/scss/website_slides.scss
@@ -610,12 +610,6 @@ $line-height-truncate: 1.25em;
     }
 }
 
-// Enforce the height of the lesson header, so the DOM element size do not change
-// when the completion progressbar become visible / hidden
-.o_wslides_lesson_header_container {
-    height: 80px;
-}
-
 // Modals
 // **************************************************
 
